# my-projects

./: .gitignore  .gitmodules  README.md
AVData-WebApp/: README.md
AVData-WebApp/avdata/: manage.py  tailwind.config.js
AWS-S3-WithPython/: 04-download-a-file.py  05-delete-bucket.py  README.md
BirthdayReminderReactApp/brithday-reminder-app/: package-lock.json  package.json
BruteForce-Script/: README.md  bruteforce.py  fakerockyou.txt
PerformanceMonitor/: README.md  main.py
VolumeControlWithHandsMovementDetection/: README.md
WebApp-DirectoryDiscovery/: README.md  list.txt
port-scanner/: README.md  portscanner.py
projects/AVData-WebApp/: README.md
projects/AsyncTasks/: README.md  docker-compose.yml  test.py
projects/NASAProject/: README.md  package-lock.json  package.json
projects/PerformanceMonitor/: README.md
projects/ToDoList-FastAPI-ElectronVue/: .gitignore  main.py  package-lock.json  pyproject.toml
projects/ToDoList-FastAPI-ElectronVue/models/: models.py
projects/ToDoList-FastAPI-ElectronVue/todo-app/: package-lock.json  package.json
projects/ToDoList-FastAPI-ElectronVue/todo-app/src/renderer/src/: App.vue  main.ts
projects/ToDoList-FastAPI-ElectronVue/todo-app/src/renderer/src/components/: TodoList.vue
projects/django-backend-server/: Dockerfile  README.md  docker-compose.yml
pwned-passwords/: README.md
scripts/AWS-S3-WithPython/: 01_connect_and_listen.py  02-upload-s3.py  03-create-bucket  05-delete-a-file.py  README.md
scripts/BruteForce-Script/: README.md
scripts/ChatRoomApp/: README.md  client.py  server.py
(+80 files in other folders)
